add timeline and resume
add timeline and resume

--- a/assets/watchoplis/css/app.css
+++ b/assets/watchoplis/css/app.css
@@ -17,12 +17,14 @@
 body {font-family: 'Open Sans', serif;}
 
 .btn.btn-small, input[type="submit"].btn.btn-small {font-family: inherit;}
-.btn-primary {background-color: rgba(22, 150, 200, 0.5);color: #ffffff;background-repeat: repeat-x;
-	background-image: linear-gradient(top, #4eb2e0, #4aaad6);
-	border-left-color: #0044cc;
-	border-right-color: #0044cc;
-	border-top-color: #0044cc;
-	border-bottom-color: #002a80;
+.btn-primary {background-color: rgba(22, 150, 200, 0.5);color: #ffffff;background-image: -moz-linear-gradient(top, #4eb2e0, #4aaad6);background-image: -ms-linear-gradient(top, #4eb2e0, #4aaad6);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4eb2e0), to(#4aaad6));background-image: -webkit-linear-gradient(top, #4eb2e0, #4aaad6);
+background-image: -o-linear-gradient(top, #4eb2e0, #4aaad6);
+background-image: linear-gradient(top, #4eb2e0, #4aaad6);
+background-repeat: repeat-x;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'4eb2e0, endColorstr='#'4aaad6, GradientType=0);
+border-color: #0044cc #0044cc #002a80;
+border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
 .btn-primary:hover,
 .btn-primary:active,
@@ -155,8 +157,14 @@ color: #8D8C8C;
 color: #ffffff;
 text-decoration: none;
 background-color: red;
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff5bbbeb,endColorstr=#ff1696c8,GradientType=0)";
-	background-image: linear-gradient(-90deg,rgb(91,187,235) 0%,rgb(22,150,200) 100%);
+background-image:-moz-linear-gradient(50% 0% -90deg,rgb(91,187,235) 0%,rgb(22,150,200) 100%); 
+background-image:-webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(91,187,235)),color-stop(1, rgb(22,150,200)));
+background-image:-webkit-linear-gradient(-90deg,rgb(91,187,235) 0%,rgb(22,150,200) 100%);
+background-image:-o-linear-gradient(-90deg,rgb(91,187,235) 0%,rgb(22,150,200) 100%);
+background-image:-ms-linear-gradient(-90deg,rgb(91,187,235) 0%,rgb(22,150,200) 100%);
+background-image:linear-gradient(-90deg,rgb(91,187,235) 0%,rgb(22,150,200) 100%);
+-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff5bbbeb,endColorstr=#ff1696c8,GradientType=0)";
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff5bbbeb,endColorstr=#ff1696c8,GradientType=0);
 }
 
 #header .navbar-link {color: #3884AA;}
@@ -515,3 +523,4 @@ top: 48px;
      -moz-border-radius: 4px 0 4px 0;
           border-radius: 4px 0 4px 0;
 }
+
